--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.19.0",
     "firebase-admin": "^13.6.1",
     "google-auth-library": "^10.5.0",
     "next": "16.1.6",
