--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^7.19.0",
+    "firebase": "^11.0.1",
     "firebase-admin": "^13.6.1",
     "google-auth-library": "^10.5.0",
     "next": "16.1.6",
